tests/invalid_syntax/test_declaration_in_procedure.aphi
/*
Demonstrates: Invalid case of variable declaration inside procedure
*/

procedure main {
    int x;
}